--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,9 @@ body {
   padding: 0;
   background: linear-gradient(120deg, var(--bg_left), var(--bg_right));
   height: 100vh;
-  overflow: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  overflow: auto;
 }
 .center {
   position: fixed;
