--- a/src/styles.css
+++ b/src/styles.css
@@ -286,3 +286,21 @@ code {
   right: 0;
   width: 64px;
 }
+
+#loading {
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background-color: var(--bg_left);
+  z-index: 99;
+}
+
+#loading-image {
+  position: absolute;
+  top: calc(40%);
+  left: calc(44%);
+}
